# Tarteel

./: .env.example  .gitignore  claude.md  compose.yml
.claude/: settings.json  settings.local.json
fastapi/: .dockerignore  Dockerfile  RAG_LEARNING.md  auth.py  cache.py  config.py  database.py  main.py  prompts.py  pyproject.toml  schemas.py
fastapi/app/: auth.py  cache.py  database.py  prompts.py  schemas.py
fastapi/app/rag/: embeddings.py  generator.py  hyde.py  pipeline.py  query_expansion.py  reranker.py  retrieval.py
fastapi/data/: questions.json
fastapi/rag/: embeddings.py  generator.py  pipeline.py  reranker.py
fastapi/scripts/: check_pdf_quality.py  find_garbled_pages.py  generate_questions.py  ingest.py  pdf_ingest.py  seed_questions.py
fastapi/scripts/scraper/: base.py  brainbok.py  examcert.py  examtopics.py  examtopics_pdf.py  knowledgehut.py  oliver_lehmann.py  pmstudycircle.py  prepcast.py  run_all.py
laravel/: .env.example  .mcp.json  CLAUDE.md  Dockerfile  composer.json  docker-entrypoint.sh
laravel/app/Jobs/: GenerateAiExplanationJob.php
laravel/app/Models/: AiResponseCache.php  Domain.php  Lesson.php  PmpChunk.php  Question.php  (+5 more)
laravel/bootstrap/: app.php
laravel/config/: horizon.php  services.php
laravel/routes/: api.php
nextjs/: CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
nextjs/app/: layout.tsx
nextjs/i18n/: request.ts
nextjs/lib/: queryClient.ts  queryKeys.ts
nextjs/messages/: ar.json  en.json
nextjs/providers/: IntlProvider.tsx  QueryProvider.tsx
nextjs/types/: api.ts
(+113 files in other folders)
