[project]
name = "tarteel-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "asyncpg>=0.31.0",
    "redis>=7.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "playwright>=1.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
